[project]
name = "mintd"
version = "0.0.1"
description = "Lightweight data product framework for research labs"
requires-python = ">=3.10"
dependencies = [
    "pydantic ~= 2.12",
    "pyyaml ~= 6.0",
    "boto3 ~= 1.34",
    "rich ~= 13.0",
    "jinja2 ~= 3.1",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "mypy >= 1.0",
    "ruff >= 0.1",
    "types-PyYAML",
    "moto[s3] ~= 5.0",
    "types-boto3",
]

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mintd = ["files/*.j2", "files/.Rprofile.j2", "files/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: requires MINTD_RUN_INTEGRATION=1 and real git",
]

[tool.ruff]
line-length = 100

[project.scripts]
mintd = "mintd.cli:main"
