[project]
name = "mintd"
version = "0.0.1"
description = "Lightweight data product framework for research labs"
requires-python = ">=3.11"
dependencies = [
    "pydantic ~= 2.12",
    "pyyaml ~= 6.0",
    "boto3 ~= 1.34",
    "rich ~= 13.0",
    "jinja2 ~= 3.1",
    "dvc >= 3.66, < 4.0",
    "dvc-s3 >= 3.3, < 4",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "mypy >= 1.0",
    "ruff >= 0.1",
    "types-PyYAML",
    "moto[s3] ~= 5.0",
    "types-boto3",
    "mintd[schema]",
]
schema = [
    "pandas >= 2.2, < 4",
    "pyarrow >= 16",
]

[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mintd = ["files/*.j2", "files/.Rprofile.j2", "files/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: requires MINTD_RUN_INTEGRATION=1 and real git",
]

[tool.ruff]
line-length = 120

[project.scripts]
mintd = "mintd.cli:main"

[tool.ruff.lint]
select = ["E", "F", "T201"]
ignore = ["E501"]  # line-length is informational; ruff format enforces real limits

[tool.ruff.lint.per-file-ignores]
"src/mintd/_console.py" = ["T201"]
"src/mintd/cli.py" = ["T201"]
"src/mintd/config_ops.py" = ["T201"]
"src/mintd/files/**" = ["T201", "E501", "F401", "F811"]
"tests/**" = ["T201", "E501"]
